# WashUHackathon24

./: .gitignore  LICENSE  README.md  TODO  backend.py  esi_model.pth  esi_predictions.csv  feature_columns.joblib  index.html  pyproject.toml  scaler.joblib  test_results.csv  vercel.json
api/: backend.py
api/api/: urls.py  views.py
api/backend/: settings.py  urls.py
api/model/notebooks/: preprocess.ipynb
api/model/src/: predict.py  train.py
model/: evaluate.py  preprocces.ipynb  train.py
model/notebooks/: data_exploration.ipynb  preprocess.ipynb
model/saved_models/: esi_model.pth  feature_columns.joblib
model/src/: predict.py
model/src/notebooks/: data_exploration.ipynb  preprocess.ipynb
src/backend/: backend.py
static/css/: index.css
static/js/: api.js  data.js  patient.js
tests/: model_test.py
