[tool.poetry]
name = "washuhackathon24"
version = "0.1.0"
description = ""
authors = ["Sayam Gupta <gupta.sayam2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
imbalanced-learn = "^0.12.4"
seaborn = "^0.13.2"
django = "^5.1.2"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
